@@ -1,3 +1,7 @@
+19990722-10:50 EDT Paul Tucker <ptucker@sympatico.ca>
+    *source/rtl/dir.c
+       * corrected hang when passing a second param to dirtest.
+
 19990722-16:30 GMT+2 Ryszard Glab <rglab@imid.med.pl>
 
     *source/compiler/harbour.y
